--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,20 +16,23 @@
     "electron-dist": "npm run build && electron-builder --publish=never"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@hookform/resolvers": "^3.3.2",
-    "@tanstack/react-query": "^5.8.4",
-    "framer-motion": "^10.16.4",
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@tanstack/react-query": "^5.90.3",
+    "@types/qrcode": "^1.5.5",
+    "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.263.1",
     "pdf-parse": "^2.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.4",
-    "react-router-dom": "^6.8.1",
-    "zod": "^3.22.4"
+    "qrcode": "^1.5.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.65.0",
+    "react-router-dom": "^6.30.1",
+    "tesseract.js": "^6.0.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
